--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,13 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.5.0'
     testImplementation 'io.qameta.allure:allure-junit5:2.19.0'
     runtimeOnly 'org.aspectj:aspectjweaver:1.9.9.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
 }
 
+def envFile = !project.hasProperty("envFile")?"":project.properties['envFile']
+
 test {
+    systemProperty("envFile", envFile.toString())
     useJUnitPlatform()
 }
 
