--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'org.seleniumhq.selenium:selenium-java:4.5.0'
@@ -28,14 +29,28 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
 }
 
-def envFile = !project.hasProperty("envFile")?"":project.properties['envFile']
 
+// gradle clean test -PenvFile=qa.properties
+
+def envFile = !project.hasProperty("envFile")?"qa.properties":project.properties['envFile']
 test {
-    systemProperty("envFile", envFile.toString())
+    systemProperty("envFile",envFile.toString())
     useJUnitPlatform()
 }
+
+def testSuite = !project.hasProperty("testSuite")?"Acceptance":project.properties['testSuite']
+def tags = tasks.register("tags",Test) {
+    systemProperty("envFile",envFile.toString())
+    systemProperty("testSuite",testSuite.toString())
+    useJUnitPlatform {
+        includeTags testSuite
+    }
+}
+
+
 
 allure {
     version = '2.2.1'
     autoconfigure = true
 }
+
